
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 OCT 06b
  * in bin/*wrp
    - updated files with NavierStokesPlasma() module to include recent constants added to the model
      

2022 OCT 06a
  * in model/share/chem_share.c
    - added add_to_*_*_2r2p_Lindemann() functions
  * in model/share/chem_share.h
    - listed add_to_*_*_2r2p_Lindemann() functions
  * in model/thermo/_generic/thermo.c
    - added species: C3H7, H2CC, CH2CHO
  * in model/thermo/_generic/thermo.hh
    - added species: C3H7, H2CC, CH2CHO to species map
  * in model/thermo/_generic/enthalpy.c
    - added McBride polynomial coefficients for species: C3H7, H2CC, CH2CHO
  * in model/transport/_Dixon-Lewis/transport.c
    - added transport properties for species: C3H7, H2CC, CH2CHO


2022 OCT 05a
  * in model/fluid/doc/Transport_Equations/report.tex
    - fixed some small typos in the equations relating to charged species heat fluxes 
      (this was already fixed in the code, but had not been fixed in the documentation)
  * in model/transport/doc/report.tex
    - added drift velocities from Tarasenko
  

2022 OCT 03a
  * in tools/chemkin2cfdwarp.c
    - made improvements
    

2022 OCT 01a
  * in model/chem/_C2H4_Air_Plasma_30s/chem.c
    - removed constants TEFROMEOVERN, TEMIN, TEMAX and added them within write_model_chem_template()
    - in write_model_chem_template(), added the flag QEI_TERMS
    - in find_dQei_dx() and find_Qei(), added all electron impact reactions from from_Igor_v3.txt
    

2022 SEP 30a
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in write_model_fluid_template(), added template for calls to heat point and body forces
    - in read_model_fluid_actions_2(), added call to read_model_fluid_actions_Fbody_Qadd()